k8s/admin-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-dashboard
  namespace: inpt-ride
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-dashboard
  template:
    metadata:
      labels:
        app: admin-dashboard
    spec:
      containers:
        - name: admin-dashboard
          image: nadaaath/inpt-ride-admin-dashboard:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: admin-dashboard
  namespace: inpt-ride
spec:
  type: NodePort
  selector:
    app: admin-dashboard
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30082
