k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: inpt-ride
  annotations:
    gitops-demo: "enabled"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: nadaaath/inpt-ride-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: backend
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /api/health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: backend
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: inpt-ride
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
